tests/errors/global_parameter_conflict.py
# expect_error: parameter and global
def bad(x):
    global x
    return x